<?xml version="1.0"?>
<package format="2">
  <name>fkie_iop_client_digital_video</name>
  <version>1.1.0</version>
  <description>The client service for digital video service </description>

  <author>Alexander Tiderko</author>
  <maintainer email="alexander.tiderko@fkie.fraunhofer.de">Alexander Tiderko</maintainer>
  <license>GPLv2</license>
  <url type="website">ttps://github.com/fkie/iop_jaus_sensing_clients</url>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>fkie_iop_client_visual_sensor</depend>
  <depend>fkie_iop_component</depend>
  <depend>fkie_iop_ocu_slavelib</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>

  <export>
    <fkie_iop_component plugin="${prefix}/plugin_iop.xml" />
  </export>

</package>
