<?xml version="1.0"?>
<package format="3">
  <name>fkie_iop_client_still_image</name>
  <version>1.1.0</version>
  <description>The client service for digital video service </description>

  <author>Alexander Tiderko</author>
  <maintainer email="alexander.tiderko@fkie.fraunhofer.de">Alexander Tiderko</maintainer>
  <license>GPLv2</license>
  <url type="website">ttps://github.com/fkie/iop_jaus_sensing_clients</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>fkie_iop_component</depend>
  <depend>fkie_iop_client_visual_sensor</depend>
  <depend>fkie_iop_ocu_slavelib</depend>
  <depend>sensor_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
