<?xml version="1.0"?>
<package>
  <name>iop_client_range_sensor_fkie</name>
  <version>1.1.0</version>
  <description>The client service for range sensor service </description>

  <maintainer email="alexander.tiderko@fkie.fraunhofer.de">Alexander Tiderko</maintainer>
  <license>GPLv2</license>
  <url type="website">ttps://github.com/fkie/iop_jaus_sensing_clients</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>boost</build_depend>
  <build_depend>iop_builder_fkie</build_depend>
  <build_depend>iop_component_fkie</build_depend>
  <build_depend>iop_ocu_control_layerlib_1_0_fkie</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf2_ros</build_depend>
  <run_depend>boost</run_depend>
  <run_depend>iop_builder_fkie</run_depend>
  <run_depend>iop_component_fkie</run_depend>
  <run_depend>iop_ocu_control_layerlib_1_0_fkie</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>tf2</run_depend>
  <run_depend>tf2_ros</run_depend>

  <export>
    <iop_component_fkie plugin="${prefix}/plugin_iop.xml" />
  </export>

</package>